fix errores filtro lateral abm usuarios

--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -20,9 +20,9 @@
             title="Asociación"
             [optionsProps]="filtrado.fotoclub.options"
             [optionsData]="fotoclubs"
+            interface="popover"
             >  
             <!-- [filterCallback]="funcionesFiltrado['fotoclub']" -->
-            <!-- interface="popover" -->
           </app-search-select>
           <!-- [(data)]="miembros" -->
           <app-search-select
