--- a/src/app/shared/search-select/search-select.component.html
+++ b/src/app/shared/search-select/search-select.component.html
@@ -9,55 +9,60 @@
         cancel-button-icon="close-outline"
       ></ion-searchbar>
     </ion-row> -->
-    <ion-row>
-      <div *ngIf="interface == 'popover'; else list">
-        <ion-item
-          class="expand-full"
-        >
-          <ion-label position="floating">{{title}}</ion-label>
-          <ion-select 
-            (ionChange)="output($event.target.value)"
-            [value]="atributoSelected"
-            interface="popover"
+      <ion-row *ngIf="interface == 'popover'; else list" class="ion-align-items-center">
+        <ion-col class="ion-no-padding">
+          <ion-item
+            class="expand-full"
           >
-            <ion-select-option 
-              *ngFor="let o of optionsData" 
-              [value]="o[optionsProps.valueProp]"
-            >{{o[optionsProps.titleProp]}}</ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-button *ngIf="atributoSelected != ''"
-          (click)="output()" fill="clear" class="">
-          <ion-icon name="close-outline"></ion-icon>
-        </ion-button>
-      </div>
+            <ion-label [position]="atributoSelected == '' ? 'floating' : 'stacked'">{{title}}</ion-label>
+            <ion-select *ngIf="!updatingSelect"
+              (ionChange)="changeQuery($event.target.value)"
+              [value]="atributoSelectedAsInt"
+              interface="popover"
+            >
+              <ion-select-option 
+                *ngFor="let o of optionsData" 
+                [value]="o[optionsProps.valueProp]"
+              >{{o[optionsProps.titleProp]}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+        <ion-col size="2" class="ion-no-padding" *ngIf="atributoSelected != ''">
+          <ion-button 
+            (click)="changeQuery()" fill="clear" class="">
+            <ion-icon name="close-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
       <!-- #atributoSelect -->
       
       <ng-template #list>
-        <ion-list>
-          <ion-list-header>
-            <ion-row class="ion-align-items-center">
-              <ion-label>{{title}}</ion-label>
-              <ion-button *ngIf="atributoSelected != ''"
-                (click)="changeQuery()" fill="clear" class=""
-                >
-                <!-- (click)="output()" fill="clear" class="" -->
-                <ion-icon name="close-outline"></ion-icon>
+        <ion-row>
+          <ion-list>
+            <ion-list-header>
+              <ion-row class="ion-align-items-center">
+                <ion-label>{{title}}</ion-label>
+                <ion-button *ngIf="atributoSelected != ''"
+                  (click)="changeQuery()" fill="clear" class=""
+                  >
+                  <!-- (click)="output()" fill="clear" class="" -->
+                  <ion-icon name="close-outline"></ion-icon>
+                </ion-button>
+              </ion-row>
+            </ion-list-header>
+            <ion-item *ngFor="let o of optionsData">
+              <!-- (click)="output(o[optionsProps.valueProp])" -->
+              <ion-button
+                (click)="changeQuery(o[optionsProps.valueProp])"
+                
+                [fill]="atributoSelected == o[optionsProps.valueProp] ? 'solid' : 'clear'"
+                expand="block"  
+              >
+                {{o[optionsProps.titleProp]}}
               </ion-button>
-            </ion-row>
-          </ion-list-header>
-          <ion-item *ngFor="let o of optionsData">
-            <!-- (click)="output(o[optionsProps.valueProp])" -->
-            <ion-button
-              (click)="changeQuery(o[optionsProps.valueProp])"
-              
-              [fill]="atributoSelected == o[optionsProps.valueProp] ? 'solid' : 'clear'"
-              expand="block"  
-            >
-              {{o[optionsProps.titleProp]}}
-            </ion-button>
-          </ion-item>
-        </ion-list>
+            </ion-item>
+          </ion-list>
+        </ion-row>
 
 
         <!-- <ion-list>
@@ -84,7 +89,6 @@
         </ion-list> -->
       </ng-template>
 
-    </ion-row>
   </ion-col>
 
 </ion-item>
