--- a/src/app/concursos/concurso-detail/concurso-tabs/concurso-tabs.component.html
+++ b/src/app/concursos/concurso-detail/concurso-tabs/concurso-tabs.component.html
@@ -1,5 +1,3 @@
-
-  
 <ion-tabs>
   <!-- <ion-content> -->
   <!-- <ion-tab-bar> -->
@@ -17,11 +15,9 @@
   </ion-tab-bar>
   <!-- </ion-content> -->
 </ion-tabs>
-<router-outlet 
-  name="concurso"
-></router-outlet>
+<router-outlet name="concurso"></router-outlet>
 <!-- </ion-col> -->
 <!-- </ion-row> -->
 
 <!-- <ion-row> -->
-  <!-- <ion-col> -->
+<!-- <ion-col> -->
