--- a/src/app/shared/contest-status-chip/contest-status-chip.component.html
+++ b/src/app/shared/contest-status-chip/contest-status-chip.component.html
@@ -1,6 +1,3 @@
-<ion-badge 
-mode="ios"
-  [color]="isActive(contest) ? 'success' : 'danger'" 
->
-  <ion-label>{{ isActive(contest) ? 'Abierto' : 'Cerrado' }}</ion-label>
+<ion-badge mode="ios" [color]="isActive(contest) ? 'success' : 'danger'">
+  <ion-label>{{ isActive(contest) ? "Abierto" : "Cerrado" }}</ion-label>
 </ion-badge>
