--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -100,9 +100,7 @@
               ></ion-item
             >
             <ion-item
-              ><ion-button fill="clear" href="#"
-                >Aprobado</ion-button
-              ></ion-item
+              ><ion-button fill="clear" href="#">Aprobado</ion-button></ion-item
             >
             <ion-item>
               <ion-button fill="clear" href="#">Mención</ion-button></ion-item
@@ -141,9 +139,11 @@
             <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
               Fotografías
             </h1>
-            <ion-fab-button size="small" 
+            <ion-fab-button
+              size="small"
               *ngIf="contestService.isActive(concurso)"
-              (click)="postImage()">
+              (click)="postImage()"
+            >
               <!-- [routerLink]="['agregar-foto']"   -->
               <ion-icon name="add"></ion-icon>
             </ion-fab-button>
@@ -151,9 +151,10 @@
 
           <ion-row class="ion-align-items-center ion-padding-bottom">
             <ion-col size="10" size-sm="11">
-              <app-search-bar 
+              <app-search-bar
                 [(data)]="resultadosConcurso"
-                [atributosObj]="atributosBusqueda">
+                [atributosObj]="atributosBusqueda"
+              >
               </app-search-bar>
             </ion-col>
             <ion-col size="2" size-sm="1">
@@ -225,7 +226,7 @@
                     </ion-row>
                     <!-- <b>Autor</b> -->
                   </ion-col>
-                  
+
                   <ion-col size="3" size-md="2">
                     <!-- <b>Premio</b> -->
                     <ion-row>
@@ -244,7 +245,7 @@
                       </div> -->
                     </ion-row>
                   </ion-col>
-                  <ion-col class="ion-hide-md-down " size="2">
+                  <ion-col class="ion-hide-md-down" size="2">
                     <!-- <b>Puntaje</b> -->
                     <ion-row>
                       <app-th-sort
@@ -296,9 +297,9 @@
                   <ion-col size="6" size-md="3" class="ion-align-self-center">
                     <ion-item>
                       <ion-col>
-                        <ion-card-subtitle title="Código de la obra"
-                          >{{ r.image.code }}</ion-card-subtitle
-                        >
+                        <ion-card-subtitle title="Código de la obra">{{
+                          r.image.code
+                        }}</ion-card-subtitle>
                         <!-- >{{ getImage(r).code }}</ion-card-subtitle> -->
                         <!-- <ion-card-title >Prueba de Riendas</ion-card-title> -->
 
@@ -310,16 +311,16 @@
                     </ion-item>
                   </ion-col>
                   <ion-col
-                    class="
-                      ion-hide-md-down ion-align-self-center
-                    "
+                    class="ion-hide-md-down ion-align-self-center"
                     size="4"
                     size-md="3"
                   >
                     <ion-item lines="none">
                       <ion-label>
-                        <ion-card-subtitle title="Fotoclub/Agrupación del autor"
-                          >{{ getFotoclubName(r.image.profile_id)
+                        <ion-card-subtitle
+                          title="Fotoclub/Agrupación del autor"
+                          >{{
+                            getFotoclubName(r.image.profile_id)
                           }}</ion-card-subtitle
                         >
                         <!-- >{{ getFotoclubName(r) }}</ion-card-subtitle> -->
@@ -331,31 +332,29 @@
                       </ion-label>
                     </ion-item>
                   </ion-col>
-                  <ion-col
-                    class="ion-align-self-center"
-                    size="3"
-                    size-md="2"
-                  >
+                  <ion-col class="ion-align-self-center" size="3" size-md="2">
                     <ion-text>{{ r.metric.prize }}</ion-text>
                     <!-- <ion-text>{{ getMetric(r).prize }}</ion-text> -->
                   </ion-col>
-                  <ion-col
-                    class="ion-align-self-center"
-                    size="2"
-                  >
+                  <ion-col class="ion-align-self-center" size="2">
                     <ion-text>{{ r.metric.score }}</ion-text>
                     <!-- <ion-text>{{ getMetric(r).score }}</ion-text> -->
                   </ion-col>
 
                   <ion-col size="1" size-md="2" class="ion-align-self-center">
-                    <ion-buttons *ngIf="contestService.isActive(concurso)"
+                    <ion-buttons
+                      *ngIf="contestService.isActive(concurso)"
                       class="ion-hide-md-down ion-justify-content-center"
                     >
-                      <ion-button (click)="concursoDetailService.reviewImage.emit(r)">
+                      <ion-button
+                        (click)="concursoDetailService.reviewImage.emit(r)"
+                      >
                         <!-- <ion-button (click)="reviewImage(getImage(r), r)"> -->
                         <ion-icon name="star-outline"></ion-icon>
                       </ion-button>
-                      <ion-button (click)="concursoDetailService.postImage.emit(r.image)">
+                      <ion-button
+                        (click)="concursoDetailService.postImage.emit(r.image)"
+                      >
                         <!-- <ion-button (click)="postImage(getImage(r))"> -->
                         <ion-icon name="create"></ion-icon>
                       </ion-button>
@@ -365,7 +364,8 @@
                         <ion-icon name="trash"></ion-icon>
                       </ion-button>
                     </ion-buttons>
-                    <ion-buttons *ngIf="contestService.isActive(concurso)"
+                    <ion-buttons
+                      *ngIf="contestService.isActive(concurso)"
                       class="ion-hide-md-up"
                     >
                       <ion-button (click)="mostrarAcciones($event, r)">
@@ -384,7 +384,7 @@
           </ion-list>
           <ng-template #spinner>
             <ion-row class="ion-justify-content-center">
-              <ion-spinner ></ion-spinner>
+              <ion-spinner></ion-spinner>
             </ion-row>
           </ng-template>
         </ion-col>
