--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -5,11 +5,12 @@
         <ion-col>
           <ion-title class="ion-margin-top">Búsqueda</ion-title>
 
+          <!-- TODO: crear modal para mobile del filtro de búsqueda y desaparecer la columna en PC y biceversa -->
           <!-- <app-search-bar
             (buscar)="filtrarUsuarios($event)"
             [atributos]="['username', 'email']"
           ></app-search-bar> -->
-          <app-search-bar 
+          <app-search-bar
             [(data)]="miembros"
             [atributosObj]="atributosBusqueda"
           >
@@ -17,11 +18,11 @@
 
           <!-- [(data)]="miembros" -->
           <app-search-select
-            title="Asociación"
+            title="Fotoclub / Agrupación"
             [optionsProps]="filtrado.fotoclub.options"
             [optionsData]="fotoclubs"
             interface="popover"
-            >  
+          >
             <!-- [filterCallback]="funcionesFiltrado['fotoclub']" -->
           </app-search-select>
           <!-- [(data)]="miembros" -->
@@ -29,7 +30,7 @@
             title="Rol"
             [optionsProps]="filtrado.rol.options"
             [optionsData]="roles"
-            >  
+          >
             <!-- [filterCallback]="funcionesFiltrado['role']" -->
           </app-search-select>
 
@@ -133,7 +134,7 @@
                     (buscar)="filtrarUsuarios($event)"
                     [atributos]="['username', 'email']"
                   ></app-search-bar> -->
-                  
+
                   <!-- <app-search-bar 
                   [(data)]="miembros"
                   [atributosObj]="atributosBusqueda"
@@ -182,7 +183,8 @@
                       </ion-col>
                       <!-- <ion-col size="2">Email</ion-col> -->
                       <ion-col size="2.5" size-md="2">
-                        <app-th-sort *ngIf="rolificador.isAdmin(userLogged)"
+                        <app-th-sort
+                          *ngIf="rolificador.isAdmin(userLogged)"
                           [sortFn]="funcionesOrdenamiento['rol']"
                           [(data)]="miembros"
                           title="Rol"
@@ -190,15 +192,15 @@
                         <!-- <ion-text *ngIf="rolificador.isAdmin(userLogged)">
                           <b>Rol</b>
                         </ion-text> -->
-                    </ion-col>
+                      </ion-col>
                       <ion-col size="2.5" size-md="2">
                         <ion-row>
-                          <app-th-sort *ngIf="rolificador.isAdmin(userLogged)"
+                          <app-th-sort
+                            *ngIf="rolificador.isAdmin(userLogged)"
                             [sortFn]="funcionesOrdenamiento['fotoclub']"
                             [(data)]="miembros"
                             title="Fotoclub / Agrupación"
                           ></app-th-sort>
-
                         </ion-row>
                         <!-- <ion-text *ngIf="rolificador.isAdmin(userLogged)"
                           ><b>Fotoclub / Agrupación</b>
@@ -215,93 +217,94 @@
 
             <!-- <div *ngIf="(users | async) as usuarios"> -->
             <!-- <div *ngIf="(miembros | async) as miembros; else spinner"> -->
-              <ion-list *ngIf="miembros.length > 0; else texto">
-                <ion-item *ngFor="let m of miembros">
-                  <ion-grid>
-                    <ion-row size="12">
-                      <ion-col size="12" size-md="7" size-sm="5.5">
-                        <ion-row
-                          class="ion-align-items-center ion-justify-content-between"
+            <ion-list *ngIf="miembros.length > 0; else texto">
+              <ion-item *ngFor="let m of miembros">
+                <ion-grid>
+                  <ion-row size="12">
+                    <ion-col size="12" size-md="7" size-sm="5.5">
+                      <ion-row
+                        class="
+                          ion-align-items-center ion-justify-content-between
+                        "
+                      >
+                        <!-- user card -->
+                        <ion-col size="3" size-sm="1.3">
+                          <app-usuario-img src="fafafa"></app-usuario-img>
+                        </ion-col>
+                        <ion-col size="8" size-sm="10.7">
+                          <ion-label class="ion-margin-start">
+                            <ion-card-subtitle title="Username"
+                              ><i>@{{m.user.username}}</i></ion-card-subtitle
+                            >
+                            <ion-text title="Nombre">
+                              <b>{{m.name}} {{m.last_name}}</b>
+                            </ion-text>
+                          </ion-label>
+                        </ion-col>
+                        <ion-col
+                          size="1"
+                          class="ion-hide-sm-up ion-justify-content-center"
                         >
-                          <!-- user card -->
-                          <ion-col size="3" size-sm="1.3">
-                            <app-usuario-img src="fafafa"></app-usuario-img>
-                          </ion-col>
-                          <ion-col size="8" size-sm="10.7">
-                            <ion-label class="ion-margin-start">
-                              <ion-card-subtitle title="Username"
-                                ><i>@{{m.user.username}}</i></ion-card-subtitle
-                              >
-                              <ion-text title="Nombre">
-                                <b>{{m.name}} {{m.last_name}}</b>
-                              </ion-text>
-                            </ion-label>
-                          </ion-col>
-                          <ion-col
-                            size="1"
-                            class="ion-hide-sm-up ion-justify-content-center"
-                          >
-                            <ion-buttons>
-                              <ion-button
-                                (click)="mostrarAcciones($event, m.user.id)"
-                              >
+                          <ion-buttons>
+                            <ion-button
+                              (click)="mostrarAcciones($event, m.user.id)"
+                            >
                               <!-- <ion-thumbnail></ion-thumbnail> -->
-                                <ion-icon
-
+                              <ion-icon
                                 slot="start"
-                                  ios="ellipsis-horizontal"
-                                  md="ellipsis-vertical"
-                                ></ion-icon>
-                              </ion-button>
-                            </ion-buttons>
-                          </ion-col>
-                        </ion-row>
-                      </ion-col>
-                      <ion-col
-                        size="2.5"
-                        size-md="2"
-                        class="ion-hide-sm-down ion-align-self-center"
+                                ios="ellipsis-horizontal"
+                                md="ellipsis-vertical"
+                              ></ion-icon>
+                            </ion-button>
+                          </ion-buttons>
+                        </ion-col>
+                      </ion-row>
+                    </ion-col>
+                    <ion-col
+                      size="2.5"
+                      size-md="2"
+                      class="ion-hide-sm-down ion-align-self-center"
+                    >
+                      <ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                        >{{ getRoleType(m.user.role_id) }}</ion-text
                       >
-                        <ion-text *ngIf="rolificador.isAdmin(userLogged)"
-                          >{{ getRoleType(m.user.role_id) }}</ion-text
-                        >
-                      </ion-col>
-                      <ion-col
-                        size="2.5"
-                        size-md="2"
-                        class="ion-hide-sm-down ion-align-self-center"
+                    </ion-col>
+                    <ion-col
+                      size="2.5"
+                      size-md="2"
+                      class="ion-hide-sm-down ion-align-self-center"
+                    >
+                      <ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                        >{{ getFotoclubName(m.fotoclub_id) }}</ion-text
                       >
-                        <ion-text *ngIf="rolificador.isAdmin(userLogged)"
-                          >{{ getFotoclubName(m.fotoclub_id) }}</ion-text
-                        >
-                      </ion-col>
-                      <ion-col
-                        size="1.5"
-                        size-md="1"
-                        class="ion-align-self-center ion-hide-sm-down"
-                      >
-                        <ion-buttons>
-                          <ion-button [routerLink]="['editar/' + m.user.id]">
-                            <ion-icon name="create"></ion-icon>
-                          </ion-button>
-                          <ion-button (click)="deleteUsuario(m.user.id)">
-                            <ion-icon name="trash"></ion-icon>
-                          </ion-button>
-                        </ion-buttons>
-                      </ion-col>
-                    </ion-row>
-                  </ion-grid>
-                </ion-item>
-              </ion-list>
-              <ng-template #texto>
-                <ion-item>
-                  <ion-item *ngIf="!loading">No hay usuarios</ion-item>
-                  <ion-item *ngIf="searchParams != undefined">
-                    con {{searchParams.atributo}} que empiece con '{{
-                    searchParams.query }}'</ion-item
-                  >
-                </ion-item>
-              </ng-template>
+                    </ion-col>
+                    <ion-col
+                      size="1.5"
+                      size-md="1"
+                      class="ion-align-self-center ion-hide-sm-down"
+                    >
+                      <ion-buttons>
+                        <ion-button [routerLink]="['editar/' + m.user.id]">
+                          <ion-icon name="create"></ion-icon>
+                        </ion-button>
+                        <ion-button (click)="deleteUsuario(m.user.id)">
+                          <ion-icon name="trash"></ion-icon>
+                        </ion-button>
+                      </ion-buttons>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+            <ng-template #texto>
+              <ion-item>
+                <ion-item *ngIf="!loading">No hay usuarios</ion-item>
+                <ion-item *ngIf="searchParams != undefined">
+                  con {{searchParams.atributo}} que empiece con '{{
+                  searchParams.query }}'</ion-item
+                >
+              </ion-item>
+            </ng-template>
             <!-- </div>
             <ng-template #spinner>
               <ion-row class="ion-justify-content-center">
